--- a/board/siemens/iot2050/Kconfig
+++ b/board/siemens/iot2050/Kconfig
@@ -8,8 +8,8 @@
 
 config TARGET_IOT2050_A53
 	bool "IOT2050 running on A53"
+	depends on SOC_K3_AM654
 	select ARM64
-	select SOC_K3_AM654
 	select BOARD_LATE_INIT
 	select SYS_DISABLE_DCACHE_OPS
 	select BINMAN
