--- a/arch/arm/mach-k3/Kconfig
+++ b/arch/arm/mach-k3/Kconfig
@@ -201,4 +201,5 @@ source "board/siemens/iot2050/Kconfig"
 source "board/ti/j721s2/Kconfig"
 source "board/toradex/verdin-am62/Kconfig"
 source "board/beagle/beagleplay/Kconfig"
+source "board/beagle/beagleboneai64/Kconfig"
 endif
